# slope_inspection

./: .gitignore
IPC/: CMakeLists.txt  package.xml
IPC/config/: env_sim.rviz  param_gazebo.yaml  time.csv
IPC/include/: callback.cpp  callback.h
IPC/launch/: ipc_gazebo.launch  ipc_real.launch
joy_rc/: CMakeLists.txt  package.xml
joy_rc/launch/: BT_x1.launch
joy_rc/src/: BT_x1.cpp  joy_node.cpp
mars_base/: CMakeLists.txt
mars_uav_sim/test_interface/launch/: so3_quadrotor_sim_node.xml
mars_uav_sim/uav_simulator/so3_quadrotor_sim/: CMakeLists.txt  package.xml
mars_uav_sim/uav_simulator/so3_quadrotor_sim/src/: so3_quadrotor_sim.cpp
